    multiple file contents are requested from the server (bz#50)
  * rewrote Database.getTroveLatestVersion()
  * Added :debuginfo handling in Strip policy, which requires debugging
    to be turned on in optflags and elfutils's eu-strip and debugedit to
    be installed.  Like :test components, :debuginfo components are not
    installed by default.

Changes in 0.50.2:
  * Any %(lib)s-derived path (/%(lib)s, %(libdir)s, %(krbprefix)s/%(lib)s,
    or %(x11prefix)s/%(lib)s) will now cause the entire package and all
    components to be flavored with the base instruction set flavor, so
    that architecture-sensitive but non-code files in (say) /usr/lib64
    do not show up on 32-bit platforms.
  * Sped up dependency resolution on the client
  * The reworked getFileContents call now asks for contents from the
    correct server when contents from more than one server are requested

Changes in 0.50.1:
  * Add support for trove=<troveVersion> in rq, cvc co, and other places that 
    use findTrove
  * Add conary q --info option to display flavors
  * changeset command uses system flavor if no flavor is specified, skips
    troves which are not included in packages and groups by default,
    takes a --no-recurse option, and filters based on the excludeTroves
    configuration setting
  * Added automatic :perl component that works like the :python component,
    and extended the multilib-friendly-or-architecture-neutral policy to
    work with perl as well as python.
  * client/server protocol negotiation is a whole lot smarter now
  * getChangeSet() results in a single URL rather than one per primary trove
  * group, fileset, and redirect recipes have macros that contain the
    buildlabel and buildbranch.
  * fixed a bug with merging absolute change sets which contain config files
  * redirections to troves w/ older versions already installed didn't work
  * the pathId generation code has changed.  For cooked troves, the